<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personal_list"
        app:titleTextAppearance="@style/custom_toolbar"
        app:title="@string/personal_list"
        app:navigationIcon="@drawable/round_close_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_list_name"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="15dp"
        android:hint="@string/personal_list_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text_personal_list"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_list_desc"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="15dp"
        android:hint="@string/personal_list_description"
        android:background="@drawable/bg_edit_text_personal_list"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_personal_list"
        app:icon="@drawable/round_playlist_add_24"
        app:iconGravity="end"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        app:cornerRadius="10dp"
        android:textSize="13sp"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_personal_list"
        android:layout_width="wrap_content"
        android:layout_height="55dp"/>

</LinearLayout>